implementation of div and fuse

--- a/PowerlineTool/map/templates/map/index.html
+++ b/PowerlineTool/map/templates/map/index.html
@@ -39,7 +39,7 @@
                 <thead>
                     <tr>
                         <th>Type</th>
-                        <th>Selected Features</th>
+                        <th>Source</th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -82,7 +82,8 @@
     </div>
 
     <div id="context-menu">
-        <div id="context-menu-content"></div>
+        <div id="context-menu-content-1"></div>
+        <div id="context-menu-content-2"></div>
         <div id="context-menu-2points">
             <ul>
                 <li class="fuse-button">Fuse</li>
