div / fuse full interaction capable

--- a/PowerlineTool/map/templates/map/index.html
+++ b/PowerlineTool/map/templates/map/index.html
@@ -66,7 +66,7 @@
                 </tbody>
             </table>
             <div style="padding: 10px;">
-                <button id="step2Validate">VALIDATE</button>
+                <button id="step2Validate">EXPORT</button>
             </div>
         </div>
     </div>    
