--- a/PowerlineTool/map/templates/map/index.html
+++ b/PowerlineTool/map/templates/map/index.html
@@ -132,6 +132,7 @@
 
     <!-- Context Menu -->
     <div id="context-menu">
+        <h3 id="context-menu-title"></h3>
         <div id="context-menu-content-1"></div>
         <div id="context-menu-content-2"></div>
         <div id="context-menu-2points">
