--- a/PowerlineTool/map/static/map/css/styles.css
+++ b/PowerlineTool/map/static/map/css/styles.css
@@ -107,10 +107,11 @@ th {
 #context-menu {
   display: none;
   position: absolute;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-  padding: 8px;
+  background-color: white;
+  width: 500px;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 #context-menu ul {
