--- a/PowerlineTool/map/templates/map/index.html
+++ b/PowerlineTool/map/templates/map/index.html
@@ -103,6 +103,7 @@
             <!-- Buttons for Step 2 -->
             <div style="padding: 10px;">
                 <button class="main-button" id="exportfeature">EXPORT</button>
+                <button class="main-button" id="edit">EDIT</button>
             </div>
         </div>
     </div>
